# gba_gbarcade

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  gbarcade.gba
.github/workflows/: main.yml
game/: Cargo.toml
game/src/: direction.rs  game_result.rs  gfx.rs  grid_background.rs  main.rs  menu_cursor.rs  printer.rs  progress.rs  rng.rs  sound_controller.rs
game/src/scenes/: aster.rs  blank.rs  bricks.rs  config.rs  game_host_state.rs  invaders.rs  lights_out.rs  menu.rs  mod.rs  pipes.rs  sweeper.rs
physical/: cartridge_sticker.psd
resources/: Cargo.toml  build.rs  validate_sfx.sh
resources/gfx/: aster_16.aseprite  aster_32.aseprite  aster_64.aseprite  aster_8.aseprite  bg_aster.aseprite  bg_aster_fore.aseprite  bg_brick_break.aseprite  bg_grid.aseprite  bg_grid_Cell.aseprite  bg_help_aster.aseprite  bg_help_brick.aseprite  bg_help_invaders.aseprite  bg_help_lights.aseprite  bg_help_pipe.aseprite  bg_help_sweeper.aseprite  bg_invader_bricks.aseprite  bg_invaders.aseprite  bg_light_out_cell.aseprite  bg_lights_out.aseprite  bg_minesweeper.aseprite  bg_pipe_lrg.aseprite  bg_pipe_parts.aseprite  bg_pipe_sml.aseprite  bg_pipes.aseprite  bg_pipes_tile_layer.aseprite  bg_snake.aseprite  brick_serve.aseprite  bricks_16x16.aseprite  bricks_32x16.aseprite  bricks_8x8.aseprite  bricks_bg.aseprite  bricks_level.aseprite  cfg_logos.aseprite  cfg_sprites.aseprite  font.aseprite  font_white.aseprite  gbarcade_logo.aseprite  invaders.aseprite  invaders_shots.aseprite  lights.aseprite  (+15 more)
resources/src/: lib.rs
