[workspace]
resolver = "2"
members = [
    "resources",
    "game",
]

[workspace.package]
version = "0.1.3"
edition = "2024"
authors = ["Emma Britton <emmabritton@pm.me>"]
description = "6 simple games for GBA"
license-file = "LICENSE"
repository = "https://github.com/emmabritton/gba_gbarcade"
readme = "README.md"
keywords = ["games", "pixels", "retro", "gba"]
categories = ["games"]
publish = false

[workspace.dependencies]
agb = "0.23.1"

[profile.dev]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false